--- a/src/app/components/create-product/create-product.component.html
+++ b/src/app/components/create-product/create-product.component.html
@@ -35,12 +35,13 @@
                 <span class="redlight"><small>{{ textSmall }}</small> {{ textSpan }}</span>
               </div>
             </div>
+            <div class="mb-3">
+              <button class="btn btn-secondary btn-lg float-start text-uppercase fs-3" routerLink="/">back</button>
+              <button type="submit" class="btn btn-success btn-lg float-end text-uppercase fs-3"
+              [disabled]="productForm.invalid"  >accept</button>
+            </div>
           </form>
-          <div class="mb-3">
-            <button class="btn btn-secondary btn-lg float-start text-uppercase fs-3" routerLink="/">back</button>
-            <button type="submit" class="btn btn-success btn-lg float-end text-uppercase fs-3"
-            [disabled]="productForm.invalid" (click)="createProduct()" >accept</button>
-          </div>
+
         </div>
       </div>
 
